deploy/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-app
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            regex: /service-one/(.*)
      rewrite:
        uriRegexRewrite:
          match: /service-one/(.*)
          rewrite: /\1
      route:
        - destination:
            host: service-one
            port:
              number: 80
    - match:
        - uri:
            regex: /service-two/(.*)
      rewrite:
        uriRegexRewrite:
          match: /service-two/(.*)
          rewrite: /\1
      route:
        - destination:
            host: service-two
            port:
              number: 80
